--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -1,1 +1,7 @@
-
+{
+  "welcome": "Willkommen",
+  "logout": "Abmelden",
+  "settings": "Einstellungen",
+  "dashboard": "Übersicht",
+  "language": "Sprache"
+}
